--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>git & github</title>
+	<title>登录</title>
 </head>
 <body>
-this is git
 login form
 </body>
 </html>
